--- a/languages/bottom-admin-bar-de_DE.po
+++ b/languages/bottom-admin-bar-de_DE.po
@@ -1,14 +1,13 @@
-# Copyright (C) 2013 WordPress
 # This file is distributed under the same license as the WordPress package.
 msgid ""
 msgstr ""
 "Project-Id-Version: Bottom Admin Bar\n"
 "Report-Msgid-Bugs-To: http://wppolyglots.wordpress.com\n"
-"POT-Creation-Date: 2014-01-17 15:02+0900\n"
-"PO-Revision-Date: 2017-12-08 15:48+0100\n"
-"Last-Translator: modshrink <hello@modshrink.com>\n"
-"Language-Team: modshrink <hello@modshrink.com>\n"
-"Language: ja\n"
+"POT-Creation-Date: 2017-12-08 15:38+0100\n"
+"PO-Revision-Date: 2017-12-08 15:47+0100\n"
+"Last-Translator: Sebastian Laube <hello@sebastianlaube.de>\n"
+"Language-Team: Sebastian Laube <hello@sebastianlaube.de>\n"
+"Language: de_DE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,4 +18,4 @@ msgstr ""
 
 #: Description:
 msgid "This plugin will move the admin bar to the bottom of the websites frontend."
-msgstr "ログインしている間, ウェブサイトに表示される管理バーを下部に移動させます。"
+msgstr "Dieses Plugin verschiebt die Admin Bar im Website Frontend an den unteren Rand."
